type aliases & intersection types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "target": "ES2015",
     "module": "commonjs",         // Module system
     "outDir": "./dist",          // Output directory
     "rootDir": "./src",          // Root directory
